--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,17 +1,43 @@
-# OS X
-.DS_Store*
-Icon?
-._*
-
-
-
-# npm
-node_modules
-package-lock.json
-*.log
-*.gz
-
-
-# Coveralls
-coverage
-
+*#
+*.iml
+*.ipr
+*.iws
+*.jar
+*.sw?
+*~
+.#*
+.*.md.html
+.DS_Store
+.attach_pid*
+.classpath
+.factorypath
+.gradle
+.idea
+.metadata
+.project
+.recommenders
+.settings
+.springBeans
+.vscode
+/code
+MANIFEST.MF
+_site/
+activemq-data
+bin
+build
+!/**/src/**/bin
+!/**/src/**/build
+build.log
+dependency-reduced-pom.xml
+dump.rdb
+interpolated*.xml
+lib/
+manifest.yml
+out
+overridedb.*
+target
+.flattened-pom.xml
+secrets.yml
+.gradletasknamecache
+.sts4-cache
+/backend/
