--- a/app/.gitignore
+++ b/app/.gitignore
@@ -35,9 +35,9 @@ lib/
 manifest.yml
 out
 overridedb.*
-target
 .flattened-pom.xml
 secrets.yml
 .gradletasknamecache
 .sts4-cache
 /backend/
+/target
