--- a/deploy/kloudjet-configurations.json
+++ b/deploy/kloudjet-configurations.json
@@ -1,14 +1,86 @@
 {
     "dev": {
-        "region" : "us-east-1" ,
-        "iam_policy_name" : "kloudjet-spring-app-iam-policy" ,
-        "iam_role_name" : "kloudjet-spring-app-iam-role" ,
-        "repo_name" : "kloudjet-spring-app-repo" ,
-        "image_tag_mutability" : "IMMUTABLE" ,
+        "region" : "us-east-1",
+        "reponame" : "kloudjet-spring-ec2-repo",
+        "image_tag_mutability" : "IMMUTABLE",
         "force_delete" : true,
-        "apprunner_service_name" : "kloudjet-spring-app-ping" ,
-        "port" : "8080" ,
-        "image_tag" : "latest" ,
-        "auto_deployments_enabled" : true 
+        "clustername" : "kloudjet-spring-ec2-cluster",
+        "ecs_task_family" : "kloudjet_ecs_task",
+        "ecs_task_essential" : "true",
+        "requires_compatibilities" : ["EC2"],
+        "network_mode" : "awsvpc",
+        "memory" : 512,
+        "cpu" : 256,
+        "ecstaskrolename" : "kj_ecsTaskExecutionRole",
+        "servicename" : "kloudjet_app_service",
+        "launch_type" : "EC2",
+        "desired_count" : 3,
+        "container_port" : 8080,
+        "app_service_sg_ingress_from_port" : 0,
+        "app_service_sg_ingress_to_port" : 0,
+        "app_service_sg_ingress_protocol" : "-1",
+        "app_service_sg_egress_from_port" : 0,
+        "app_service_sg_egress_to_port" : 0,
+        "app_service_sg_egress_protocol" : "-1",
+        "app_service_sg_egress_cidr_blocks" : ["0.0.0.0/0"],
+        "regiona" : "us-east-1a",
+        "regionb" : "us-east-1b",
+        "regionc" : "us-east-1c",
+        "lbname" : "spring-lb-ec2",
+        "load_balancer_type" : "application",
+        "lb_sg_ingress_from_port" : 8080,
+        "lb_sg_ingress_to_port" : 8080,
+        "lb_sg_ingress_protocol" : "tcp",
+        "lb_sg_ingress_cidr_blocks" : ["0.0.0.0/0"],
+        "lb_sg_ingress_ipv6_cidr_blocks" : ["::/0"],
+        "lb_sg_egress_from_port" : 0,
+        "lb_sg_egress_to_port" : 0,
+        "lb_sg_egress_protocol" : "-1",
+        "lb_sg_egress_cidr_blocks" : ["0.0.0.0/0"],
+        "lb_sg_egress_ipv6_cidr_blocks" : ["::/0"],
+        "tgname" : "kloudjettargetgroup",
+        "lb_tg_port" : 8080,
+        "lb_tg_protocol" : "HTTP",
+        "target_type" : "ip",
+        "matcher" : "200,301,302",
+        "path" : "/",
+        "healthy_threshold" : 3,
+        "unhealthy_threshold" : 10,
+        "timeout" : 3,
+        "interval" : 10,
+        "lb_tg_health_protocol" : "HTTP",
+        "image" : "ami-02e136e904f3da870",
+        "instance_type" : "t2.micro",
+        "ec2_role_name" : "nodejs_ecsTaskExecutionRole",
+        "ec2_profile_name" : "nodejs_ecsTaskExecutionProfile",
+        "ec2_policy_name" : "nodejs_ecsTaskExecutionPolicy",
+        "lb_listener_port" : "8080",
+        "lb_listener_protocol" : "HTTP",
+        "lb_listener_type" : "forward",
+        "max_capacity" : 4,
+        "min_capacity" : 1,
+        "scalable_dimension" : "ecs:service:DesiredCount",
+        "service_namespace" : "ecs",
+        "aspolicyname" : "app_as_memory_autoscaling",
+        "policy_type_memory" : "TargetTrackingScaling",
+        "predefined_metric_type_memory" : "ECSServiceAverageMemoryUtilization",
+        "target_value_memory" : 80,
+        "appautoscaling_policy_name" : "app_as_cpu_autoscaling",
+        "policy_type_cpu" : "TargetTrackingScaling",
+        "predefined_metric_type_cpu" : "ECSServiceAverageCPUUtilization",
+        "target_value_cpu" : 60,
+        "origin_protocol_policy" : "http-only",
+        "http_port" : "8080",
+        "https_port" : "443",
+        "origin_ssl_protocols" : ["TLSv1.2"],
+        "enabled" : true,
+        "allowed_methods" : ["DELETE","GET","HEAD","OPTIONS","PATCH","POST","PUT"],
+        "cached_methods" : ["GET","HEAD","OPTIONS"],
+        "cache_policy_id" : "658327ea-f89d-4fab-a63d-7e88639e58f6",
+        "origin_request_policy_id" : "59781a5b-3903-41f3-afcb-af62929ccde1",
+        "response_headers_policy_id" : "60669652-455b-4ae9-85a4-c4c02393f86c"   ,
+        "viewer_protocol_policy" : "allow-all",
+        "restriction_type" : "none",
+        "cloudfront_default_certificate" : true
     }
 }
