--- a/deploy/kloudjet-configurations.json
+++ b/deploy/kloudjet-configurations.json
@@ -1,21 +1,21 @@
 {
     "dev": {
         "region" : "us-east-1",
-        "reponame" : "kloudjet-spring-ec2-repo",
+        "reponame" : "kloudjet-spring-fargate-repo",
         "image_tag_mutability" : "IMMUTABLE",
         "force_delete" : true,
-        "clustername" : "kloudjet-spring-ec2-cluster",
+        "clustername" : "kloudjet-spring-fargate-cluster",
         "ecs_task_family" : "kloudjet_ecs_task",
-        "ecs_task_essential" : "true",
-        "requires_compatibilities" : ["EC2"],
+        "requires_compatibilities" : ["FARGATE"],
         "network_mode" : "awsvpc",
         "memory" : 512,
         "cpu" : 256,
         "ecstaskrolename" : "kj_ecsTaskExecutionRole",
         "servicename" : "kloudjet_app_service",
-        "launch_type" : "EC2",
+        "launch_type" : "FARGATE",
         "desired_count" : 3,
         "container_port" : 8080,
+        "assign_public_ip" : true,
         "app_service_sg_ingress_from_port" : 0,
         "app_service_sg_ingress_to_port" : 0,
         "app_service_sg_ingress_protocol" : "-1",
@@ -26,10 +26,10 @@
         "regiona" : "us-east-1a",
         "regionb" : "us-east-1b",
         "regionc" : "us-east-1c",
-        "lbname" : "spring-lb-ec2",
+        "lbname" : "spring-lb-fargate",
         "load_balancer_type" : "application",
-        "lb_sg_ingress_from_port" : 8080,
-        "lb_sg_ingress_to_port" : 8080,
+        "lb_sg_ingress_from_port" : 80,
+        "lb_sg_ingress_to_port" : 80,
         "lb_sg_ingress_protocol" : "tcp",
         "lb_sg_ingress_cidr_blocks" : ["0.0.0.0/0"],
         "lb_sg_ingress_ipv6_cidr_blocks" : ["::/0"],
@@ -39,7 +39,7 @@
         "lb_sg_egress_cidr_blocks" : ["0.0.0.0/0"],
         "lb_sg_egress_ipv6_cidr_blocks" : ["::/0"],
         "tgname" : "kloudjettargetgroup",
-        "lb_tg_port" : 8080,
+        "lb_tg_port" : 80,
         "lb_tg_protocol" : "HTTP",
         "target_type" : "ip",
         "matcher" : "200,301,302",
@@ -49,12 +49,7 @@
         "timeout" : 3,
         "interval" : 10,
         "lb_tg_health_protocol" : "HTTP",
-        "image" : "ami-02e136e904f3da870",
-        "instance_type" : "t2.micro",
-        "ec2_role_name" : "nodejs_ecsTaskExecutionRole",
-        "ec2_profile_name" : "nodejs_ecsTaskExecutionProfile",
-        "ec2_policy_name" : "nodejs_ecsTaskExecutionPolicy",
-        "lb_listener_port" : "8080",
+        "lb_listener_port" : "80",
         "lb_listener_protocol" : "HTTP",
         "lb_listener_type" : "forward",
         "max_capacity" : 4,
@@ -70,7 +65,7 @@
         "predefined_metric_type_cpu" : "ECSServiceAverageCPUUtilization",
         "target_value_cpu" : 60,
         "origin_protocol_policy" : "http-only",
-        "http_port" : "8080",
+        "http_port" : "80",
         "https_port" : "443",
         "origin_ssl_protocols" : ["TLSv1.2"],
         "enabled" : true,
