--- a/app/package.json
+++ b/app/package.json
@@ -12,11 +12,10 @@
   "engines": {
     "node": ">=14.15.0"
   },
-  
   "eslintConfig": {
-      "extends": "@serverless/eslint-config/node",
-      "root": true
-    },
+    "extends": "@serverless/eslint-config/node",
+    "root": true
+  },
   "dependencies": {
     "@middy/core": "^4.1.0",
     "@middy/http-json-body-parser": "^4.1.0",
@@ -27,6 +26,7 @@
     "@serverless/typescript": "^3.25.0",
     "@types/aws-lambda": "^8.10.109",
     "@types/jest": "^29.2.5",
+    "@types/jquery": "^3.5.16",
     "@types/node": "^18.11.18",
     "eslint": "^8.32.0",
     "eslint-plugin-import": "^2.27.5",
