--- a/deploy/kloudjet-configurations.json
+++ b/deploy/kloudjet-configurations.json
@@ -1,5 +1,6 @@
 {
         "dev" : {
+                "region" : "us-east-1",
                 "service" : "aws-sls-backend-nodejs-lambda",
                 "serverlessOfflineHttpPort" : 3000,
                 "minimumCompressionSize" : 1024,
