--- a/app/package.json
+++ b/app/package.json
@@ -1,54 +1,35 @@
 {
-  "name": "angular-frontend",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test --no-watch --code-coverage",
-    "lint": "ng lint"
-  },
   "private": true,
+  "scripts": {
+    "dev": "next -p 8000",
+    "build": "next build && next export",
+    "start": "next start",
+    "type-check": "tsc",
+    "test": "jest --coverage"
+  },
   "dependencies": {
-    "@angular/animations": "~15.2.7",
-    "@angular/common": "~15.2.7",
-    "@angular/compiler": "~15.2.7",
-    "@angular/core": "~15.2.7",
-    "@angular/forms": "~15.2.7",
-    "@angular/platform-browser": "~15.2.7",
-    "@angular/platform-browser-dynamic": "~15.2.7",
-    "@angular/router": "~15.2.7",
-    "@ng-bootstrap/ng-bootstrap": "^14.1.0",
-    "postcss-import": "^15.1.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.5.0",
-    "zone.js": "~0.13.0"
+    "axios": "^1.2.1",
+    "next": "^13.0.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~15.2.6",
-    "@angular-eslint/builder": "15.2.1",
-    "@angular-eslint/eslint-plugin": "15.2.1",
-    "@angular-eslint/eslint-plugin-template": "15.2.1",
-    "@angular-eslint/schematics": "15.2.1",
-    "@angular-eslint/template-parser": "15.2.1",
-    "@angular/cli": "~15.2.6",
-    "@angular/compiler-cli": "~15.2.7",
-    "@types/jasmine": "~4.3.1",
-    "@types/node": "^18.15.11",
-    "@typescript-eslint/eslint-plugin": "5.58.0",
-    "@typescript-eslint/parser": "5.58.0",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.38.0",
-    "jasmine-core": "~4.6.0",
-    "karma": "~6.4.1",
-    "karma-chrome-launcher": "~3.1.1",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
-    "postcss": "^8.4.21",
-    "prettier": "2.8.7",
-    "tailwindcss": "^3.3.1",
-    "typescript": "~5.0.4"
+    "@fullhuman/postcss-purgecss": "^5.0.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/node": "^18.11.17",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "babel-jest": "^29.3.1",
+    "eslint": "^8.30.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.3.1",
+    "postcss-preset-env": "^7.8.3",
+    "prettier": "^2.8.1",
+    "react-test-renderer": "^18.2.0",
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.4"
   }
 }
