--- a/app/.gitignore
+++ b/app/.gitignore
@@ -1,10 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-
-# next.js
-/.next/
-/out/
-package-lock.json
-
+dist
+node_modules
+coverage
