--- a/deploy/kloudjet-configurations.json
+++ b/deploy/kloudjet-configurations.json
@@ -8,7 +8,7 @@
         "force_detach_policies" : true,
         "inline_policy" : null,
         "managed_policy_arns" : null,
-        "max_session_duration" : null,
+        "max_session_duration" : 1,
         "iam_role_prefix" : null,
         "iam_role_path" : null,
         "permissions_boundary" : null,
