--- a/deploy/kloudjet-configurations.json
+++ b/deploy/kloudjet-configurations.json
@@ -1,62 +1,39 @@
 {
-    "dev": {
-        "region" : "us-east-1" ,
-        "iam_policy_name" : "kloudjet-node-app-iam-policy",
-        "iam_policy_prefix" : null,
-        "iam_role_description" : null,
-        "iam_role_name" :  "kloudjet-node-app-iam-role",
-        "force_detach_policies" : true,
-        "inline_policy" : null,
-        "managed_policy_arns" : null,
-        "max_session_duration" : 3600,
-        "iam_role_prefix" : null,
-        "iam_role_path" : null,
-        "permissions_boundary" : null,
-        "iam_role_tags" : {},
-        "reponame" : "kloudjet-node-app-repo",
-        "encryption_type" : null,
-        "kms_key" : null,
-        "force_delete" : true,
+    "dev" : {
+        "region" : "us-east-1",
+        "vpc_id" : "",
+        "reponame" : "kj-nodejs-eks-repo",
         "image_tag_mutability" : "IMMUTABLE",
-        "scan_on_push" : false,
-        "ecr_tags" : {},
-        "apprunner_service_name" : "kloudjet-node-app-ping",
-        "connection_arn" : null,
-        "auto_deployments_enabled" : false,
-        "code_repository" : false,
-        "build_command" : null,
-        "apprunner_port" : null,
-        "runtime" : null,
-        "runtime_environment_secrets" : {},
-        "runtime_environment_variables" : {},
-        "start_command" : null,
-        "configuration_source" : null,
-        "repository_url" : null,
-        "source_code_type" : null,
-        "source_code_value" : null,
-        "image_repository" : true,
-        "port" : "8080",
-        "image_runtime_environment_secrets" : {},
-        "image_runtime_environment_variables" : {},
-        "image_start_command" : null,
-        "image_tag" : "latest",
-        "image_repository_type" : "ECR",
-        "auto_scaling_configuration_arn" : null,
-        "encryption_kms_key" : "",
-        "healthy_threshold" : 1,
-        "interval" : 5,
-        "health_path" : "/",
-        "health_protocol" : "TCP",
-        "health_timeout" : 2,
-        "unhealthy_threshold" : 5,
-        "instance_cpu" : "1024",
-        "instance_role_arn" : null,
-        "instance_memory" : 2048,
-        "is_publicly_accessible" : true,
-        "egress_type" : "DEFAULT",
-        "vpc_connector_arn" : null,
-        "observability_enabled" : false,
-        "observability_configuration_arn" : null,
-        "apprunner_tags" : {}
+        "force_delete" : true,
+        "egress_from_port" : 0,
+        "egress_to_port" : 0,
+        "egress_protocol" : -1,
+        "egress_cidr_blocks" : ["0.0.0.0/0"],
+        "sg_from_port" : 443,
+        "sg_protocol" : "tcp",
+        "sg_to_port" : 443,
+        "sg_type" : "ingress",
+        "cluster_name" : "K8_Cluster",
+        "node_group_name" : "k8_cluster",
+        "instance_type" : "t3.medium",
+        "desired_capacity" : 1,
+        "max_capacity" : 2,
+        "min_capacity" : 1,
+        "lbControllerRoleName" : "AmazonEKSLoadBalancerControllerRole",
+        "loadBalancerControllerPolicy" : "AWSLoadBalancerControllerIAMPolicy",
+        "origin_protocol_policy" : "http-only",
+        "http_port" : 80,
+        "https_port" : 443,
+        "origin_ssl_protocols" : ["TLSv1.2"],
+        "enabled" : true,
+        "allowed_methods" : ["DELETE","GET","HEAD","OPTIONS","PATCH","POST","PUT"],
+        "cached_methods" : ["GET","HEAD","OPTIONS"],
+        "viewer_protocol_policy" : "allow-all",
+        "query_string" : false,
+        "forward" : "none",
+        "restriction_type" : "none",
+        "cloudfront_default_certificate" : true,
+        "namespace" : "default",
+        "replicas" : 2
     }
 }
