--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,21 +1,6 @@
-# pull the official base image
-FROM python:3.9-alpine
-
-# set work directory
-WORKDIR /usr/src/app
-
-# set environment variables
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
-
-# install dependencies
-RUN pip install --upgrade pip 
-COPY ./requirements.txt /usr/src/app
-RUN pip install -r requirements.txt
-
-# copy project
-COPY . /usr/src/app
-
-EXPOSE 8000
-
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+FROM node:alpine
+COPY package*.json ./
+RUN npm install --only=production
+COPY . .
+EXPOSE 8080
+CMD [ "node", "index.js" ]
