--- a/deploy/kloudjet-configurations.json
+++ b/deploy/kloudjet-configurations.json
@@ -1,35 +1,73 @@
 {
     "dev": {
-        "region": "us-east-1",
-        "iam_policy_name": "kloudjet-node-app-iam-policy",
-        "iam_policy_prefix": null,
-        "iam_role_description": null,
-        "force_detach_policies": true,
-        "max_session_duration": 3600,
-        "iam_path": "/",
-        "iam_role_name": "kloudjet-node-app-iam-role",
-        "iam_role_prefix": null,
-        "iam_role_tags": {},
-        "reponame": "kloudjet-node-app-repo",
-        "encryption_configuration": [],
-        "ecr_force_delete": true,
-        "image_tag_mutability": "IMMUTABLE",
-        "image_scanning_configuration": {},
-        "ecr_tags": {},
-        "apprunner_service_name": "kloudjet-node-app-ping",
-        "auto_deployments_enabled": true,
-        "image_port": "8080",
-        "image_runtime_environment_secrets": {},
-        "image_runtime_environment_variables": {},
-        "image_start_command": null,
-        "image_tag": "latest",
-        "image_repository_type": "ECR",
-        "auto_scaling_configuration_arn": null,
-        "apprunner_encryption_configuration": {},
-        "health_check_configuration": {"healthy_threshold":1,"health_interval":1,"health_path":"/","health_protocol":"TCP","health_timeout":2,"unhealthy_threshold":5},
-        "instance_configuration": {},
-        "network_configuration": {},
-        "observability_configuration": {},
-        "apprunner_tags": {}
+        "region":"us-east-1", 
+        "ami_id":"ami-0715c1897453cabd1", 
+        "security_group_name":"kloudjet_security_group_ec2", 
+        "sg_description":"Security_group_for_usage_with_EC2_instance", 
+        "vpc_id":null,
+        "ingress_cidr_blocks":["0.0.0.0/0"], 
+        "ingress_rules":["http-80-tc","all-icm","ssh-tcp"], 
+        "egress_rules":["all-all"], 
+        "instance_count":1, 
+        "associate_public_ip_address":true, 
+        "availability_zone":null, 
+        "capacity_reservation_specification":{}, 
+        "cpu_options":{}, 
+        "credit_specification":{}, 
+        "disable_api_stop":null, 
+        "disable_api_termination":null, 
+        "ebs_block_device":[], 
+        "ebs_optimized":false, 
+        "enclave_options":{}, 
+        "ephemeral_block_device":[], 
+        "get_password_data":false, 
+        "hibernation":null, 
+        "host_id":null, 
+        "host_resource_group_arn":null, 
+        "iam_instance_profile":"EC2_Can_Use_Services", 
+        "instance_initiated_shutdown_behavior":null, 
+        "instance_type":"t2.micro", 
+        "ipv6_address_count":null, 
+        "ipv6_addresses":[], 
+        "key_name":null, 
+        "launch_template":{}, 
+        "maintenance_options":{}, 
+        "metadata_options":{}, 
+        "monitoring":false, 
+        "network_interface":[], 
+        "placement_group":null, 
+        "placement_partition_number":null, 
+        "private_dns_name_options":{}, 
+        "private_ips":[], 
+        "private_ip":null, 
+        "root_block_device":[], 
+        "secondary_private_ips":[], 
+        "security_groups":[], 
+        "source_dest_check":true, 
+        "subnet_id":null, 
+        "use_num_suffix":false, 
+        "name":"kloudjet_ec2", 
+        "tags":{}, 
+        "tenancy":"default", 
+        "user_data":null, 
+        "user_data_base64":null, 
+        "user_data_replace_on_change":null, 
+        "volume_tags":{}, 
+        "volume_attachment_count":1, 
+        "aws_volume_attachment_device":"xvdh", 
+        "volume_force_detach":false, 
+        "skip_destroy":false, 
+        "stop_instance_before_detaching":false, 
+        "ebs_encrypted":false, 
+        "final_snapshot":false, 
+        "ebs_iops":null, 
+        "multi_attach_enabled":false, 
+        "ebs_size":2, 
+        "snapshot_id":null, 
+        "outpost_arn":null, 
+        "ebs_type":null, 
+        "kms_key_id":null, 
+        "ebs_tags":{}, 
+        "throughput":null
     }
 }
