ec2-volume-testing-5

--- a/deploy/kloudjet-configurations.json
+++ b/deploy/kloudjet-configurations.json
@@ -3,7 +3,8 @@
         "region":"us-east-1", 
         "ami_id":"ami-0715c1897453cabd1", 
         "security_group_name":"kloudjet_security_group_ec2", 
-        "sg_description":"Security_group_for_usage_with_EC2_instance",
+        "sg_description":"Security_group_for_usage_with_EC2_instance", 
+        "vpc_id": "vpc-ece4f996",
         "ingress_cidr_blocks":["0.0.0.0/0"], 
         "ingress_rules":["http-80-tc","all-icm","ssh-tcp"], 
         "egress_rules":["all-all"], 
@@ -43,7 +44,7 @@
         "secondary_private_ips":[], 
         "security_groups":[], 
         "source_dest_check":true, 
-        "subnet_id":null, 
+        "subnet_id":"subnet-a9eb2488", 
         "use_num_suffix":false, 
         "name":"kloudjet_ec2", 
         "tags":{}, 
