--- a/deploy/kloudjet-configurations.json
+++ b/deploy/kloudjet-configurations.json
@@ -6,7 +6,7 @@
         "sg_description":"Security_group_for_usage_with_EC2_instance", 
         "vpc_id": "vpc-ece4f996",
         "ingress_cidr_blocks":["0.0.0.0/0"], 
-        "ingress_rules":["http-80-tc","all-icm","ssh-tcp"], 
+        "ingress_rules":["http-80-tcp","all-icmp","ssh-tcp"], 
         "egress_rules":["all-all"], 
         "instance_count":1, 
         "associate_public_ip_address":true, 
