--- a/deploy/kloudjet-configurations.json
+++ b/deploy/kloudjet-configurations.json
@@ -1,71 +1,100 @@
 {
-    "dev": {
-        "region":"us-east-1", 
-        "ami_id":"ami-0715c1897453cabd1", 
-        "security_group_name":"kloudjet_security_group_ec2", 
-        "sg_description":"Security_group_for_usage_with_EC2_instance", 
-        "vpc_id": "vpc-ece4f996",
-        "ingress_cidr_blocks":["0.0.0.0/0"], 
-        "ingress_rules":["http-80-tcp","all-icmp","ssh-tcp"], 
-        "egress_rules":["all-all"],
-        "associate_public_ip_address":true, 
-        "availability_zone":null, 
-        "capacity_reservation_specification":{}, 
-        "cpu_options":{}, 
-        "credit_specification":{}, 
-        "disable_api_stop":null, 
-        "disable_api_termination":null, 
-        "ebs_block_device":[], 
-        "ebs_optimized":false, 
-        "enclave_options":{}, 
-        "ephemeral_block_device":[], 
-        "get_password_data":false, 
-        "hibernation":null, 
-        "host_id":null, 
-        "host_resource_group_arn":null, 
-        "iam_instance_profile":"EC2_Can_Use_Services", 
-        "instance_initiated_shutdown_behavior":null, 
-        "instance_type":"t2.micro", 
-        "ipv6_address_count":null, 
-        "ipv6_addresses":[], 
-        "key_name":null, 
-        "launch_template":{}, 
-        "maintenance_options":{}, 
-        "metadata_options":{}, 
-        "monitoring":false, 
-        "network_interface":[], 
-        "placement_group":null, 
-        "placement_partition_number":null, 
-        "private_dns_name_options":{}, 
-        "private_ips":[], 
-        "private_ip":null, 
-        "root_block_device":[], 
-        "secondary_private_ips":[], 
-        "security_groups":[], 
-        "source_dest_check":true, 
-        "subnet_id":"subnet-a9eb2488", 
-        "use_num_suffix":false, 
-        "name":"kloudjet_ec2", 
-        "tags":{}, 
-        "tenancy":"default", 
-        "user_data":null, 
-        "user_data_base64":null, 
-        "user_data_replace_on_change":null, 
-        "volume_tags":{},
-        "aws_volume_attachment_device":"xvdh", 
-        "volume_force_detach":false, 
-        "skip_destroy":false, 
-        "stop_instance_before_detaching":false, 
-        "ebs_encrypted":false, 
-        "final_snapshot":false, 
-        "ebs_iops":null, 
-        "multi_attach_enabled":false, 
-        "ebs_size":2, 
-        "snapshot_id":null, 
-        "outpost_arn":null, 
-        "ebs_type":null, 
-        "kms_key_id":null, 
-        "ebs_tags":{}, 
-        "throughput":null
+    "dev" : {
+        "region" : "us-west-1",
+        "vpc_id" : "vpc-f9ea1e9f",
+        "reponame":"kj-nodejs-eks-repo",
+        "encryption_configuration":{},
+        "force_delete":true,
+        "image_tag_mutability":"IMMUTABLE",
+        "image_scanning_configuration":{},
+        "iam_role_description":null,
+        "force_detach_policies":true,
+        "max_session_duration":3600,
+        "iam_path":"/",
+        "iam_role_name":"kloudjet-node-app-iam-role",
+        "iam_role_prefix":null,
+        "iam_role_tags":{},
+        "sg_description":null,
+        "sg_egress":[{"sg_egress_from_port":0,"sg_egress_to_port":0,"sg_egress_protocol":"-1","sg_egress_cidr_blocks":["0.0.0.0/0"]}],
+        "sg_ingress":[],
+        "sg_name":null,
+        "sg_name_prefix":null,
+        "revoke_rules_on_delete":false,
+        "sg_tags":{},
+        "sg_from_port":443,
+        "sg_protocol":"tcp",
+        "sg_to_port":443,
+        "sgr_description":null,
+        "ipv6_cidr_blocks":[],
+        "sgr_prefix_list_ids":[],
+        "cluster_name":"K8_Cluster",
+        "endpoint_private_access":false,
+        "endpoint_public_access":true,
+        "public_access_cidrs":["0.0.0.0/0"],
+        "enabled_cluster_log_types":[],
+        "eks_cluster_encryption_config":{},
+        "kubernetes_network_config":{},
+        "outpost_config":{},
+        "cluster_tags":{},
+        "cluster_version":null,
+        "oidc_tags":{},
+        "desired_capacity":1,
+        "max_capacity":2,
+        "min_capacity":1,
+        "eks_ami_type":null,
+        "capacity_type":null,
+        "disk_size":null,
+        "force_update_version":null,
+        "instance_types":["t3.medium"],
+        "labels":{},
+        "launch_template":{},
+        "node_group_name":"k8_cluster",
+        "node_group_name_prefix":null,
+        "release_version":null,
+        "remote_access":null,
+        "node_group_tags":{},
+        "taint":[],
+        "node_group_version":null,
+        "lbControllerRoleName":"AmazonEKSLoadBalancerControllerRole",
+        "loadBalancerControllerPolicy":"AWSLoadBalancerControllerIAMPolicy",
+        "loadBalancerControllerPolicyPath":"/",
+        "aliases":[],
+        "cloudfront_comments":null,
+        "custom_error_response":[],
+        "allowed_methods":["DELETE","GET","HEAD","OPTIONS","PATCH","POST","PUT"],
+        "cached_methods":["GET","HEAD","OPTIONS"],
+        "compress":false,
+        "default_ttl":null,
+        "field_level_encryption_id":null,
+        "forwarded_values":{"forward":"none","query_string":false},
+        "lambda_function_association":[],
+        "function_association":[],
+        "max_ttl":null,
+        "min_ttl":null,
+        "origin_request_policy_id":null,
+        "realtime_log_config_arn":null,
+        "response_headers_policy_id":null,
+        "smooth_streaming":false,
+        "trusted_key_groups":[],
+        "trusted_signers":[],
+        "viewer_protocol_policy":"allow",
+        "default_root_object":null,
+        "enabled":true,
+        "is_ipv6_enabled":false,
+        "http_version":null,
+        "logging_config":{},
+        "connection_attempts":null,
+        "connection_timeout":null,
+        "custom_origin_config":{"http_port":"80","https_port":"443","origin_protocol_policy":"http-only","origin_ssl_protocols":["TLSv1.2"]},
+        "custom_header":[],
+        "origin_path":null,
+        "origin_shield":{},
+        "price_class":null,
+        "restrictions":{"restriction_type":"none"},
+        "cloudfront_tags":{},
+        "viewer_certificate":{"cloudfront_default_certificate":true},
+        "web_acl_id":null,
+        "retain_on_delete":false,
+        "wait_for_deployment":false
     }
 }
