--- a/deploy/kloudjet-configurations.json
+++ b/deploy/kloudjet-configurations.json
@@ -3,10 +3,11 @@
         "region" : "us-west-1",
         "vpc_id" : "vpc-f9ea1e9f",
         "reponame":"kj-nodejs-eks-repo",
-        "encryption_configuration":{},
+        "encryption_configuration":[],
         "force_delete":true,
         "image_tag_mutability":"IMMUTABLE",
-        "image_scanning_configuration":{},
+        "image_scanning_configuration":[],
+        "ecr_tags":{},
         "iam_role_description":null,
         "force_detach_policies":true,
         "max_session_duration":3600,
@@ -17,8 +18,8 @@
         "sg_description":null,
         "sg_egress":[{"sg_egress_from_port":0,"sg_egress_to_port":0,"sg_egress_protocol":"-1","sg_egress_cidr_blocks":["0.0.0.0/0"]}],
         "sg_ingress":[],
-        "sg_name":null,
         "sg_name_prefix":null,
+        "sg_name":null,
         "revoke_rules_on_delete":false,
         "sg_tags":{},
         "sg_from_port":443,
@@ -32,9 +33,9 @@
         "endpoint_public_access":true,
         "public_access_cidrs":["0.0.0.0/0"],
         "enabled_cluster_log_types":[],
-        "eks_cluster_encryption_config":{},
-        "kubernetes_network_config":{},
-        "outpost_config":{},
+        "eks_cluster_encryption_config":[],
+        "kubernetes_network_config":[],
+        "outpost_config":[],
         "cluster_tags":{},
         "cluster_version":null,
         "oidc_tags":{},
@@ -47,11 +48,11 @@
         "force_update_version":null,
         "instance_types":["t3.medium"],
         "labels":{},
-        "launch_template":{},
+        "launch_template":[],
         "node_group_name":"k8_cluster",
         "node_group_name_prefix":null,
         "release_version":null,
-        "remote_access":null,
+        "remote_access":[],
         "node_group_tags":{},
         "taint":[],
         "node_group_version":null,
@@ -66,7 +67,7 @@
         "compress":false,
         "default_ttl":null,
         "field_level_encryption_id":null,
-        "forwarded_values":{"forward":"none","query_string":false},
+        "forwarded_values":[{"forward":"none","query_string":false}],
         "lambda_function_association":[],
         "function_association":[],
         "max_ttl":null,
@@ -77,22 +78,22 @@
         "smooth_streaming":false,
         "trusted_key_groups":[],
         "trusted_signers":[],
-        "viewer_protocol_policy":"allow",
+        "viewer_protocol_policy":"allow-all",
         "default_root_object":null,
         "enabled":true,
         "is_ipv6_enabled":false,
         "http_version":null,
-        "logging_config":{},
+        "logging_config":[],
         "connection_attempts":null,
         "connection_timeout":null,
-        "custom_origin_config":{"http_port":"80","https_port":"443","origin_protocol_policy":"http-only","origin_ssl_protocols":["TLSv1.2"]},
+        "custom_origin_config":[{"http_port":"80","https_port":"443","origin_protocol_policy":"http-only","origin_ssl_protocols":["TLSv1.2"]}],
         "custom_header":[],
         "origin_path":null,
         "origin_shield":{},
         "price_class":null,
-        "restrictions":{"restriction_type":"none"},
+        "restrictions":[{"restriction_type":"none"}],
         "cloudfront_tags":{},
-        "viewer_certificate":{"cloudfront_default_certificate":true},
+        "viewer_certificate":[{"cloudfront_default_certificate":true}],
         "web_acl_id":null,
         "retain_on_delete":false,
         "wait_for_deployment":false
