node-eks-healthcare

--- a/deploy/kloudjet-configurations.json
+++ b/deploy/kloudjet-configurations.json
@@ -1,103 +1,150 @@
 {
-    "dev" : {
-        "region" : "us-west-1",
-        "vpc_id" : "vpc-f9ea1e9f",
-        "reponame":"kj-nodejs-eks-repo",
-        "encryption_configuration":[],
-        "force_delete":true,
-        "image_tag_mutability":"IMMUTABLE",
-        "image_scanning_configuration":[],
-        "ecr_tags":{},
-        "iam_role_description":null,
-        "force_detach_policies":true,
-        "max_session_duration":3600,
-        "iam_path":"/",
-        "iam_role_name":"kloudjet-node-app-iam-role",
-        "iam_role_prefix":null,
-        "iam_role_tags":{},
-        "sg_description":null,
-        "sg_egress":[{"sg_egress_from_port":0,"sg_egress_to_port":0,"sg_egress_protocol":"-1","sg_egress_cidr_blocks":["0.0.0.0/0"]}],
-        "sg_ingress":[],
-        "sg_name_prefix":null,
-        "sg_name":null,
-        "revoke_rules_on_delete":false,
-        "sg_tags":{},
-        "sg_from_port":443,
-        "sg_protocol":"tcp",
-        "sg_to_port":443,
-        "sgr_description":null,
-        "ipv6_cidr_blocks":[],
-        "sgr_prefix_list_ids":[],
-        "cluster_name":"K8_Cluster",
-        "endpoint_private_access":false,
-        "endpoint_public_access":true,
-        "public_access_cidrs":["0.0.0.0/0"],
-        "enabled_cluster_log_types":[],
-        "eks_cluster_encryption_config":[],
-        "kubernetes_network_config":[],
-        "outpost_config":[],
-        "cluster_tags":{},
-        "cluster_version":null,
-        "oidc_tags":{},
-        "desired_capacity":1,
-        "max_capacity":2,
-        "min_capacity":1,
-        "eks_ami_type":null,
-        "capacity_type":null,
-        "disk_size":null,
-        "force_update_version":null,
-        "instance_types":["t3.medium"],
-        "labels":{},
-        "launch_template":[],
-        "node_group_name":"k8_cluster",
-        "node_group_name_prefix":null,
-        "release_version":null,
-        "remote_access":[],
-        "node_group_tags":{},
-        "taint":[],
-        "node_group_version":null,
-        "lbControllerRoleName":"AmazonEKSLoadBalancerControllerRole",
-        "loadBalancerControllerPolicy":"AWSLoadBalancerControllerIAMPolicy",
-        "loadBalancerControllerPolicyPath":"/",
-        "aliases":[],
-        "cloudfront_comments":null,
-        "custom_error_response":[],
-        "allowed_methods":["DELETE","GET","HEAD","OPTIONS","PATCH","POST","PUT"],
-        "cached_methods":["GET","HEAD","OPTIONS"],
-        "compress":false,
-        "default_ttl":null,
-        "field_level_encryption_id":null,
-        "forwarded_values":[{"forward":"none","query_string":false}],
-        "lambda_function_association":[],
-        "function_association":[],
-        "max_ttl":null,
-        "min_ttl":null,
-        "origin_request_policy_id":null,
-        "realtime_log_config_arn":null,
-        "response_headers_policy_id":null,
-        "smooth_streaming":false,
-        "trusted_key_groups":[],
-        "trusted_signers":[],
-        "viewer_protocol_policy":"allow-all",
-        "default_root_object":null,
-        "enabled":true,
-        "is_ipv6_enabled":false,
-        "http_version":null,
-        "logging_config":[],
-        "connection_attempts":null,
-        "connection_timeout":null,
-        "custom_origin_config":[{"http_port":"80","https_port":"443","origin_protocol_policy":"http-only","origin_ssl_protocols":["TLSv1.2"]}],
-        "custom_header":[],
-        "origin_path":null,
-        "origin_shield":[],
-        "price_class":null,
-        "restrictions":[{"restriction_type":"none"}],
-        "cloudfront_tags":{},
-        "viewer_certificate":[{"cloudfront_default_certificate":true}],
-        "web_acl_id":null,
-        "retain_on_delete":false,
-        "wait_for_deployment":false,
-        "namespace" : "default",
-        "replicas" : 2
+    "dev": {
+        "region": "us-west-1",
+        "vpc_id": "",
+        "reponame": "kj-nodejs-eks-repo",
+        "encryption_configuration": [],
+        "force_delete": true,
+        "image_tag_mutability": "IMMUTABLE",
+        "image_scanning_configuration": [],
+        "ecr_tags": {},
+        "iam_role_description": null,
+        "force_detach_policies": true,
+        "max_session_duration": 3600,
+        "iam_path": "/",
+        "iam_role_name": "kloudjet-nodejs-app-iam-role",
+        "iam_role_prefix": null,
+        "iam_role_tags": {},
+        "sg_description": null,
+        "sg_egress": [
+            {
+                "sg_egress_from_port": 0,
+                "sg_egress_to_port": 0,
+                "sg_egress_protocol": "-1",
+                "sg_egress_cidr_blocks": [
+                    "0.0.0.0/0"
+                ]
+            }
+        ],
+        "sg_ingress": [],
+        "sg_name_prefix": null,
+        "sg_name": null,
+        "revoke_rules_on_delete": false,
+        "sg_tags": {},
+        "sg_from_port": 443,
+        "sg_protocol": "tcp",
+        "sg_to_port": 443,
+        "sgr_description": null,
+        "ipv6_cidr_blocks": [],
+        "sgr_prefix_list_ids": [],
+        "cluster_name": "K8_Cluster_nodejs",
+        "endpoint_private_access": false,
+        "endpoint_public_access": true,
+        "public_access_cidrs": [
+            "0.0.0.0/0"
+        ],
+        "enabled_cluster_log_types": [],
+        "eks_cluster_encryption_config": [],
+        "kubernetes_network_config": [],
+        "outpost_config": [],
+        "cluster_tags": {},
+        "cluster_version": null,
+        "oidc_tags": {},
+        "desired_capacity": 1,
+        "max_capacity": 2,
+        "min_capacity": 1,
+        "eks_ami_type": null,
+        "capacity_type": null,
+        "disk_size": null,
+        "force_update_version": null,
+        "instance_types": [
+            "t3.medium"
+        ],
+        "labels": {},
+        "launch_template": [],
+        "node_group_name": "K8_Cluster_nodejs",
+        "node_group_name_prefix": null,
+        "release_version": null,
+        "remote_access": [],
+        "node_group_tags": {},
+        "taint": [],
+        "node_group_version": null,
+        "lbControllerRoleName": "nodejsAmazonEKSLoadBalancerControllerRole",
+        "loadBalancerControllerPolicy": "nodejsAWSLoadBalancerControllerIAMPolicy",
+        "loadBalancerControllerPolicyPath": "/",
+        "aliases": [],
+        "cloudfront_comments": null,
+        "custom_error_response": [],
+        "allowed_methods": [
+            "DELETE",
+            "GET",
+            "HEAD",
+            "OPTIONS",
+            "PATCH",
+            "POST",
+            "PUT"
+        ],
+        "cached_methods": [
+            "GET",
+            "HEAD",
+            "OPTIONS"
+        ],
+        "compress": false,
+        "default_ttl": null,
+        "field_level_encryption_id": null,
+        "forwarded_values": [
+            {
+                "forward": "none",
+                "query_string": false
+            }
+        ],
+        "lambda_function_association": [],
+        "function_association": [],
+        "max_ttl": null,
+        "min_ttl": null,
+        "origin_request_policy_id": null,
+        "realtime_log_config_arn": null,
+        "response_headers_policy_id": null,
+        "smooth_streaming": false,
+        "trusted_key_groups": [],
+        "trusted_signers": [],
+        "viewer_protocol_policy": "allow-all",
+        "default_root_object": null,
+        "enabled": true,
+        "is_ipv6_enabled": false,
+        "http_version": null,
+        "logging_config": [],
+        "connection_attempts": null,
+        "connection_timeout": null,
+        "custom_origin_config": [
+            {
+                "http_port": "80",
+                "https_port": "443",
+                "origin_protocol_policy": "http-only",
+                "origin_ssl_protocols": [
+                    "TLSv1.2"
+                ]
+            }
+        ],
+        "custom_header": [],
+        "origin_path": null,
+        "origin_shield": [],
+        "price_class": null,
+        "restrictions": [
+            {
+                "restriction_type": "none"
+            }
+        ],
+        "cloudfront_tags": {},
+        "viewer_certificate": [
+            {
+                "cloudfront_default_certificate": true
+            }
+        ],
+        "web_acl_id": null,
+        "retain_on_delete": false,
+        "wait_for_deployment": false,
+        "namespace": "default",
+        "replicas": 2
     }
 }
